--- a/mmogo/blog/templates/index.html
+++ b/mmogo/blog/templates/index.html
@@ -8,7 +8,7 @@
 {% block og_metatags %}
     <meta property="fb:app_id"  content="192779637534941" />
     <meta property="og:type"    content="website" />
-    <meta property="og:title"   content="{{ campaign.title }}" />
+    <meta property="og:title"   content="Trade Economics" />
 
     <meta property="og:description" content="{{ campaign.description }}" />
     <meta property="og:url"     content="https://www.ebutler.co.za/recipes/mzansi-pasta" />
